# 3Dorth

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOAL.md  GOAL_IMAGING.md  LICENSE  Makefile  NOTICE  README.md  WATCHDOG.md  config.yaml  conftest.py  deploy.sh  docker-compose.restricted.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  serve-public.sh
.claude/agents/: app-react.md  (+17 more)
.github/: PULL_REQUEST_TEMPLATE.md
api/: __init__.py  main.py
app_react/: README.md  index.html  package-lock.json  package.json  vite.config.js
app_trame/: __init__.py  app.py  controls.py  scene.py
core/: __init__.py  parameters.py  pipeline.py  resources.py
deploy/: Dockerfile.backend  Dockerfile.backend.gpu  Dockerfile.react  nginx.conf  nginx.conf.template
docs/: DEFINITION_OF_DONE.md  IMAGING_DESIGN.md  IMAGING_DESIGN_clinical.md  IMAGING_DESIGN_technical.md  METHOD.md
scripts/: _ui.sh  build_demo_bundle.py  capture_ui.py  deploy_k8s.sh  deploy_restricted.sh  detect_hardware.py  dynamic_resources.sh  egress_probe.sh  export_figure.py  ingest_report.py  make_demo.py  make_multi_demo.py  pick_ports.sh  qa_region_thumbnails.py  qa_segment.py  qa_thickness.py  qa_trame_clip_stats.py  qa_trame_compare.py  qa_trame_figures.py  qa_trame_final.py  qa_trame_mpr.py  qa_trame_oblique.py  qa_trame_oblique_compare.py  qa_trame_rework.py  relay_connect.sh  relay_server.sh  run_local_example.sh  run_native.sh  setup.sh  setup_tunnel_token.sh  share.sh  share_from_laptop.sh  start_docker_restricted.sh  stats_report.py  tunnel.sh  tunnel_menu.sh  watchdog.py
(+102 files in other folders)
